--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 
-body{
+body
+{
     background-color:white;
 }
-
-
-
 
 .header
 {
@@ -19,21 +17,12 @@ border: 60px solid white;
 margin-bottom: 0px;
 }
 
-
-
-
-
-
-
-
  .main{
     text-align: center;
     background-color: rgb(108, 187, 223);
     align-self: center;
     border-bottom: 3px solid rgb(108, 187, 223);
-   
-    margin-top:20px;
-
+   margin-top:20px;
 }
     
   .planner
@@ -42,8 +31,8 @@ margin-bottom: 0px;
   }  
 
 
-  label
-  {
+label
+{
 width:100%;
 text-align: center;
 background-color: rgb(108, 187, 223);
@@ -52,23 +41,26 @@ font-weight:bold;
 margin-bottom:0px;
 height: 30px;
   }
-h1{
+
+  h1
+  {
     text-align: center;
     padding: 20px;
     font-weight:bold;
     font-size:33px;
-}
+  }
 
 
 input
 {
-width: 80%;
+width: 100%;
 height:60px;
-border: 6px solid white;
+border: 4px solid;
 color: grey;
 }
 
-.times{
+.times
+{
     color: white;
 }
 
@@ -115,7 +107,6 @@ animation: animate 8s linear infinite;
 button:before
 {
 content:'';
-
 top: -5px;
 left:-5px;
 right:-5px;
@@ -132,11 +123,12 @@ button:hover::before
 filter:blur(20px);
 }
 
-footer{
-    
+footer
+{
     text-align: center;
     background-color:  rgb(108, 187, 223);
     color:white;
     font-weight:bold;
-    font-size: 18px;
+    font-size: 22px;
+    margin-top:50px;
 }
